@@ -359,6 +359,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6794: Fix Decimal.compare_total and Decimal.compare_total_mag: NaN
+  payloads are now ordered by integer value rather than lexicographically.
+
 - Issue #6693: New functions in site.py to get user/global site packages paths.
 
 - The thread.lock type now supports weak references.
